<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerNames">

    <TextView
        android:id="@+id/p1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/p2Name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/p2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/p1Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/p1Name"
        app:layout_constraintTop_toTopOf="@+id/p1Name" />

    <TextView
        android:id="@+id/p1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/p1Name"
        app:layout_constraintStart_toStartOf="@+id/p1Name"
        app:layout_constraintTop_toBottomOf="@+id/p1Name" />

    <TextView
        android:id="@+id/p2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/p2Name"
        app:layout_constraintStart_toStartOf="@+id/p2Name"
        app:layout_constraintTop_toTopOf="@+id/p1Score" />

    <Button
        android:id="@+id/tikTakToe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tik_tak_toe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice"
        app:layout_constraintBottom_toBottomOf="@+id/tikTakToe"
        app:layout_constraintEnd_toStartOf="@+id/playerNames"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tikTakToe"
        app:layout_constraintTop_toTopOf="@+id/tikTakToe" />

    <Button
        android:id="@+id/playerNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_names"
        app:layout_constraintBottom_toBottomOf="@+id/dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dice"
        app:layout_constraintTop_toTopOf="@+id/dice" />
</androidx.constraintlayout.widget.ConstraintLayout>