<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ex2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5512996" />

    <ImageView
        android:id="@+id/dicesImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:srcCompat="@drawable/deux_des_a_six_faces" />

    <Button
        android:id="@+id/rollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="roll"
        android:text="@string/roll"
        app:layout_constraintEnd_toStartOf="@+id/throwButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/throwButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:enabled="false"
        android:onClick="throwDice"
        android:text="@string/throw_dice"
        app:layout_constraintBottom_toBottomOf="@+id/rollButton"
        app:layout_constraintEnd_toStartOf="@+id/resetButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rollButton"
        app:layout_constraintTop_toTopOf="@+id/rollButton" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:enabled="false"
        android:onClick="reset"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@+id/throwButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/throwButton"
        app:layout_constraintTop_toTopOf="@+id/throwButton" />

    <ImageView
        android:id="@+id/dice1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/dice2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dicesImage"
        app:layout_constraintWidth_percent="0.25"
        app:srcCompat="@drawable/ic_dice_1" />

    <ImageView
        android:id="@+id/dice2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/dice1"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dice1"
        app:layout_constraintTop_toTopOf="@+id/dice1"
        app:layout_constraintWidth_percent="0.25"
        app:srcCompat="@drawable/ic_dice_1" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/rollingDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="dice1,dice2,p1Name,p2Name" />

    <TextView
        android:id="@+id/p1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/dice1"
        app:layout_constraintEnd_toEndOf="@+id/dice1"
        app:layout_constraintStart_toStartOf="@+id/dice1" />

    <TextView
        android:id="@+id/p2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/p1Name"
        app:layout_constraintEnd_toEndOf="@+id/dice2"
        app:layout_constraintStart_toStartOf="@+id/dice2"
        app:layout_constraintTop_toTopOf="@+id/p1Name" />
</androidx.constraintlayout.widget.ConstraintLayout>